--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -110,6 +110,22 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <version>8.2.2.jre11</version>
 </dependency>
    
+   
+	<dependency>
+	
+	    <groupId>org.apache.commons</groupId>
+	
+	    <artifactId>commons-csv</artifactId>
+	
+	    <version>1.5</version>
+	
+	</dependency>
+	
+	<dependency>
+	    <groupId>io.confluent</groupId>
+	    <artifactId>kafka-schema-registry-client</artifactId>
+	    <version>5.4.1</version>
+	</dependency>
 
 
     <dependency>
@@ -168,222 +184,5 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   </dependencies>
   
-  
-
-
-
-  <build>
-
-    <plugins>
-
-      <plugin>
-
-        <groupId>org.apache.maven.plugins</groupId>
-
-        <artifactId>maven-compiler-plugin</artifactId>
-
-        <version>3.8.1</version>
-
-        <configuration>
-
-          <source>${java.version}</source>
-
-          <target>${java.version}</target>
-
-          <compilerArgs>
-
-            <arg>-Xlint:all</arg>
-
-          </compilerArgs>
-
-        </configuration>
-
-      </plugin>
-
-      <plugin>
-
-        <groupId>org.apache.avro</groupId>
-
-        <artifactId>avro-maven-plugin</artifactId>
-
-        <version>${avro.version}</version>
-
-        <executions>
-
-          <execution>
-
-          <phase>generate-sources</phase>
-
-          <goals>
-
-            <goal>schema</goal>
-
-          </goals>
-
-          <configuration>
-
-            <sourceDirectory>${project.basedir}/src/main/resources/avro/io/confluent/examples/clients/basicavro/</sourceDirectory>
-
-            <includes>
-
-              <include>Payment.avsc</include>
-
-            </includes>
-
-            <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
-
-          </configuration>
-
-        </execution>
-
-      </executions>
-
-      </plugin>
-
-      <plugin>
-
-        <groupId>org.apache.maven.plugins</groupId>
-
-        <artifactId>maven-eclipse-plugin</artifactId>
-
-        <version>2.19.1</version>
-
-        <configuration>
-
-            <downloadJavadocs>true</downloadJavadocs>
-
-        </configuration>
-
-      </plugin>
-
-      <plugin>
-
-          <groupId>io.confluent</groupId>
-
-          <artifactId>kafka-schema-registry-maven-plugin</artifactId>
-
-          <version>${confluent.version}</version>
-
-          <configuration>
-
-              <schemaRegistryUrls>
-
-                  <param>http://localhost:8081</param>
-
-              </schemaRegistryUrls>
-
-              <subjects>
-
-                  <transactions-value>src/main/resources/avro/io/confluent/examples/clients/basicavro/Payment2a.avsc</transactions-value>
-
-              </subjects>
-
-          </configuration>
-
-          <goals>
-
-              <goal>test-compatibility</goal>
-
-          </goals>
-
-      </plugin>
-
-      <plugin>
-
-          <groupId>org.apache.maven.plugins</groupId>
-
-          <artifactId>maven-checkstyle-plugin</artifactId>
-
-          <executions>
-
-              <!--
-
-               This declaration merges with the one in the parent, rather
-
-               than overriding it, so we need to disable the "validate" phase
-
-               execution that the parent declares and declare our own
-
-               during "test-compile".
-
-
-
-               One reason for this is that avro codegen runs during compile,
-
-               and while it's not strictly a precondition, it's
-
-               confusing to address style violations while the IDE is telling you
-
-               that some generated class doesn't exist. Test-compile is the first phase
-
-               that's guaranteed to run after compile and before any unit or integration
-
-               tests.
-
-
-
-               Also, we want to disable the parent's configuration because it declares stuff
-
-               we don't care about, like suppressions. (Honestly, it shouldn't)
-
-               -->
-
-              <execution>
-
-                  <id>validate</id>
-
-                  <phase>none</phase>
-
-                  <configuration>
-
-                      <skip>true</skip>
-
-                  </configuration>
-
-              </execution>
-
-              <execution>
-
-                  <id>test-compile</id>
-
-                  <phase>test-compile</phase>
-
-                  <configuration>
-
-                      <encoding>UTF-8</encoding>
-
-                      <consoleOutput>true</consoleOutput>
-
-                      <failsOnError>true</failsOnError>
-
-                      <failOnViolation>true</failOnViolation>
-
-                      <includeResources>false</includeResources>
-
-                      <includeTestResources>false</includeTestResources>
-
-                      <includeTestSourceDirectory>true</includeTestSourceDirectory>
-
-                      <excludes>io/confluent/examples/streams/avro/**</excludes>
-
-                      <configLocation>checkstyle.xml</configLocation>
-
-                  </configuration>
-
-                  <goals>
-
-                      <goal>check</goal>
-
-                  </goals>
-
-              </execution>
-
-          </executions>
-
-      </plugin>
-
-    </plugins>
-
-  </build>
 
 </project>
