--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -105,10 +105,16 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <!-- Add the Kafka dependencies -->
     <dependency>
-    <groupId>com.microsoft.sqlserver</groupId>
-    <artifactId>mssql-jdbc</artifactId>
-    <version>8.2.2.jre11</version>
-</dependency>
+	    <groupId>com.microsoft.sqlserver</groupId>
+	    <artifactId>mssql-jdbc</artifactId>
+	    <version>8.2.2.jre11</version>
+	</dependency>
+	
+	<dependency>
+		 <groupId>org.mongodb</groupId>
+		 <artifactId>mongo-java-driver</artifactId>
+		 <version>3.12.0</version>
+	</dependency>
    
    
 	<dependency>
