--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -45,7 +45,6 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
   </description>
 
 
-
   <properties>
 
     <!-- Keep versions as properties to allow easy modification -->
@@ -115,6 +114,13 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		 <artifactId>mongo-java-driver</artifactId>
 		 <version>3.12.0</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>io.confluent</groupId>
+	    <artifactId>kafka-streams-avro-serde</artifactId>
+	    <version>5.2.1</version>
+	</dependency>
+		
    
    
 	<dependency>
@@ -126,6 +132,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	    <version>1.5</version>
 	
 	</dependency>
+	
+	<dependency>
+    <groupId>org.apache.kafka</groupId>
+    <artifactId>kafka-streams</artifactId>
+    <version>2.4.1</version>
+</dependency>
 	
 	<dependency>
 	    <groupId>io.confluent</groupId>
