--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -1,206 +1,131 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-
-http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-  <modelVersion>4.0.0</modelVersion>
-
-
-
-  <parent>
-
-      <groupId>io.confluent</groupId>
-
-      <artifactId>rest-utils-parent</artifactId>
-
-      <version>5.4.1</version>
-
-  </parent>
-
-
-
-  <artifactId>java-client-avro-examples</artifactId>
-
-  <packaging>jar</packaging>
-
-
-
-  <organization>
-
-      <name>Confluent, Inc.</name>
-
-      <url>http://confluent.io</url>
-
-  </organization>
-
-  <url>http://confluent.io</url>
-
-  <description>
-
-     Avro Client Example
-
-  </description>
-
-
-  <properties>
-
-    <!-- Keep versions as properties to allow easy modification -->
-
-    <java.version>8</java.version>
-
-    <avro.version>1.9.2</avro.version>
-
-    <gson.version>2.2.4</gson.version>
-
-    <!-- Maven properties for compilation -->
-
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-    <checkstyle.suppressions.location>checkstyle/suppressions.xml</checkstyle.suppressions.location>
-
-  </properties>
-
-
-
-  <repositories>
-
-    <repository>
-
-      <id>confluent</id>
-
-      <name>Confluent</name>
-
-      <url>https://packages.confluent.io/maven/</url>
-
-    </repository>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>Kafka-Java</groupId>
+    <artifactId>Kafka-Java</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Kafka-Java</name>
     
-    
-
-
-  </repositories>
-
-
-
-  <pluginRepositories>
-
-    <pluginRepository>
-
-      <id>confluent</id>
-
-      <url>https://packages.confluent.io/maven/</url>
-
-    </pluginRepository>
-
-  </pluginRepositories>
-
-
-
-  <dependencies>  
-
-    <!-- Add the Kafka dependencies -->
-    <dependency>
-    <groupId>com.microsoft.sqlserver</groupId>
-    <artifactId>mssql-jdbc</artifactId>
-    <version>8.2.2.jre11</version>
-	</dependency>
-	
-	<dependency>
-		 <groupId>org.mongodb</groupId>
-		 <artifactId>mongo-java-driver</artifactId>
-		 <version>3.12.0</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>io.confluent</groupId>
-	    <artifactId>kafka-streams-avro-serde</artifactId>
-	    <version>5.2.1</version>
-	</dependency>
-		
-   
-   
-	<dependency>
-	
-	    <groupId>org.apache.commons</groupId>
-	
-	    <artifactId>commons-csv</artifactId>
-	
-	    <version>1.5</version>
-	
-	</dependency>
-	
-	<dependency>
-    <groupId>org.apache.kafka</groupId>
-    <artifactId>kafka-streams</artifactId>
-    <version>2.4.1</version>
-</dependency>
-	
-	<dependency>
-	    <groupId>io.confluent</groupId>
-	    <artifactId>kafka-schema-registry-client</artifactId>
-	    <version>5.4.1</version>
-	</dependency>
-
-
-    <dependency>
-
-      <groupId>io.confluent</groupId>
-
-      <artifactId>kafka-avro-serializer</artifactId>
-
-      <version>${confluent.version}</version>
-
-    </dependency>
-
-    <dependency>
-
-      <groupId>org.apache.kafka</groupId>
-
-      <artifactId>kafka-clients</artifactId>
-
-      <version>${kafka.version}</version>
-
-    </dependency>
-
-    <dependency>
-
-      <groupId>org.apache.avro</groupId>
-
-      <artifactId>avro</artifactId>
-
-      <version>${avro.version}</version>
-
-    </dependency>
-
-    <dependency>
-
-      <groupId>com.google.code.gson</groupId>
-
-      <artifactId>gson</artifactId>
-
-      <version>${gson.version}</version>
-
-    </dependency>
-
-    <dependency>
-
-       <groupId>org.slf4j</groupId>
-
-       <artifactId>slf4j-log4j12</artifactId>
-
-     </dependency>
-     
-   <dependency>
-   	<groupId>com.googlecode.json-simple</groupId>
-   	<artifactId>json-simple</artifactId>
-   	<version>1.1</version>
-	</dependency>
-
-  </dependencies>
-  
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>12</maven.compiler.source>
+        <maven.compiler.target>12</maven.compiler.target>
+    </properties>
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <name>Confluent</name>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </pluginRepository>
+    </pluginRepositories>
+    <dependencies>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-streams-avro-serde</artifactId>
+            <version>5.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-schema-registry-client</artifactId>
+            <version>5.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+	  <dependency>
+	    <groupId>org.apache.avro</groupId>
+	    <artifactId>avro</artifactId>
+	    <version>1.9.2</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.avro</groupId>
+	    <artifactId>avro-maven-plugin</artifactId>
+	    <version>1.9.2</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.avro</groupId>
+	    <artifactId>avro-compiler</artifactId>
+	    <version>1.9.2</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.avro</groupId>
+	    <artifactId>avro-ipc</artifactId>
+	    <version>1.9.2</version>
+	  </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.30</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+    </dependencies>
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-maven-plugin</artifactId>
+            <version>1.9.2</version>
+            <executions>
+                <execution>
+                    <phase>generate-sources</phase>
+                    <goals>
+                        <goal>schema</goal>
+                    </goals>
+                    <configuration>
+                        <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+                        <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+                        <fieldVisibility>PRIVATE</fieldVisibility>
+                        <includes>
+                            <include>**/*.avsc</include>
+                        </includes>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+    </build>
 </project>
