--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -135,12 +135,20 @@
         <archive>
           <manifest>
             <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
+            <classpathPrefix>classes/</classpathPrefix>
             <mainClass>confluent.cloud.WeatherAPIProducer</mainClass>
           </manifest>
         </archive>
       </configuration>
     </plugin>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>1.2.1</version>
+      <configuration>
+          <mainClass>confluent.cloud.WeatherAPIProducer</mainClass>
+      </configuration>
+  </plugin>
     </plugins>
     </build>
 </project>
