--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -142,13 +142,20 @@
       </configuration>
     </plugin>
     <plugin>
-      <groupId>org.codehaus.mojo</groupId>
-      <artifactId>exec-maven-plugin</artifactId>
-      <version>1.2.1</version>
-      <configuration>
-          <mainClass>confluent.cloud.WeatherAPIProducer</mainClass>
-      </configuration>
-  </plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>
+                            confluent.cloud.WeatherAPIProducer
+                        </mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </plugin>
     </plugins>
     </build>
 </project>
