--- a/Kafka-Java/pom.xml
+++ b/Kafka-Java/pom.xml
@@ -126,7 +126,21 @@
                 </execution>
             </executions>
         </plugin>
-     
+        <plugin>
+      <!-- Build an executable JAR -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>classes/</classpathPrefix>
+            <mainClass>confluent.cloud.WeatherAPIProducer</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
     <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
