--- a/docker-pipeline/pom.xml
+++ b/docker-pipeline/pom.xml
@@ -150,7 +150,7 @@
                 <archive>
                     <manifest>
                         <mainClass>
-                            confluent.cloud.WeatherAPIProducer
+                            processes.Entry
                         </mainClass>
                     </manifest>
                 </archive>
